--- a/spring-boot-config/src/main/resources/application.properties
+++ b/spring-boot-config/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 my.greeting=Hello Ramya
 my.list.value=one,two,three
 dbValues={connection: 'http://---', userName: 'foo', pass:'pass'}
+db.connection={connection: 'http://---', userName: 'foo', pass:'pass'}
+db.host=127.0.01
+db.port=1200
+
+management.endpoints.web.exposure.include=*
