--- a/spring-boot-config/src/main/resources/application-test.yml
+++ b/spring-boot-config/src/main/resources/application-test.yml
@@ -11,3 +11,7 @@ db:
   port: 2400
 
 management.endpoints.web.exposure.include: "*"
+
+spring.cloud.config.uri: http://localhost:8888
+
+spring.application.name: spring-boot-config
